# amp-devcontainer

./: .dockerignore  .gitignore  .mega-linter.yml  .release-please-manifest.json  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  package-lock.json  package.json  pull-request-body.md  release-please-config.json
.devcontainer/: Dockerfile  apt-requirements-base.json  apt-requirements-clang.json  devcontainer-metadata-vscode.json  devcontainer.json  requirements.in  requirements.txt  update-dependencies.sh  update-vscode-extensions.sh
.devcontainer/base/: Dockerfile  add-sbom-note.sh  apt-repositories.json  apt-requirements.json  devcontainer-metadata.json  devcontainer.json  tool-inventory.json
.devcontainer/clang/: apt-requirements.json
.devcontainer/clang-15/: apt-requirements.json
.devcontainer/cpp/: Dockerfile  apt-repositories.json  apt-requirements-base.json  apt-requirements-clang.json  devcontainer-lock.json  devcontainer-metadata-vscode.json  devcontainer-metadata.json  devcontainer.json  first-run-notice.txt  requirements.in  requirements.txt  tool-inventory.json  update-apt-dependencies.sh  update-vscode-extensions.sh
.devcontainer/cpp-template/: devcontainer-template.json
.devcontainer/cpp-test/: devcontainer.json
.devcontainer/cpp/test/mutation/: CMakeLists.txt  test.cpp
.devcontainer/cpp/test/sanitizers/: CMakeLists.txt  asan.cpp  threadsan.cpp  ubsan.cpp
.devcontainer/cpp/test/test/: CMakeLists.txt
.devcontainer/docs/: Dockerfile  apt-requirements.json  devcontainer-metadata.json  devcontainer.json  requirements.in  requirements.txt  tool-inventory.json
.devcontainer/docs-test/: devcontainer.json
.devcontainer/embedded-cpp/: apt-requirements.json  devcontainer-lock.json  devcontainer-metadata.json  devcontainer.json  tool-inventory.json
.devcontainer/embedded-cpp-test/: devcontainer.json
.devcontainer/embedded-rust/: devcontainer-metadata.json  devcontainer.json  tool-inventory.json
.devcontainer/embedded-rust-test/: devcontainer.json
.devcontainer/gcc-10/: apt-requirements.json  install-arm-none-eabi.sh
.devcontainer/gherkin/: Dockerfile  apt-requirements-base.json  devcontainer-metadata-vscode.json  devcontainer.json
.devcontainer/gherkin-test/: devcontainer.json
.devcontainer/rust/: Dockerfile  apt-requirements-base.json  apt-requirements.json  devcontainer-metadata-vscode.json  devcontainer-metadata.json  devcontainer.json  first-run-notice.txt  tool-inventory.json
.devcontainer/rust-template/: devcontainer-template.json
.devcontainer/rust-test/: devcontainer.json
.devcontainer/scripts/: add-sbom-note.sh
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  SECURITY.md  TOOL_VERSION_ISSUE_TEMPLATE.md  VSCODE_EXTENSION_UPDATE_PR_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  tool_request.md
.github/actions/: CHANGELOG.md
.github/container-size-diff/: action.yml  container-size-diff.sh
.github/instructions/: actions.instructions.md  workflows.instructions.md
.github/linters/: .gherkin-lintrc  .trivyignore.yml
.github/scripts/: generate-tool-inventory.sh  merge-devcontainer-metadata.sh
.github/workflows/: acceptance-test.yml  build-push-test.yml  build-push.yml  ci.yml  cleanup-pr-image.yml  continuous-integration.yml  dora-metrics.yml  evaluate-tool-version-issue.yml  image-cleanup.yml  integration-test.yml  issue-cleanup.yml  issue-creation-tool-versions.yml  linting-formatting.yml  ossf-scorecard.yml  package-published.yml  pr-conventional-title.yml  pr-image-cleanup.yml  pr-report.yml  prime-cache.yml  release-build.yml  release-please.yml  release-published.yml  social-interaction.yml  stale-items.yml  update-dependencies.yml  validate-pr.yml  verify-specification.yml  vulnerability-scan.yml  wc-acceptance-test.yml  wc-build-push-test-flavor.yml  wc-build-push-test.yml  wc-build-push.yml  wc-dependency-review.yml  wc-document-generation.yml  wc-integration-test-docker.yml  wc-integration-test-podman.yml  wc-integration-test.yml  wc-publish-templates.yml  wc-sanitize-image-name.yml  wc-sanitize-inputs.yml
docs/: REQUIREMENTS.md  SECURITY_ANALYSIS.md  SECURITY_SUMMARY.md  threat-model.sbdl
docs/adr/: 0000-record-architecture-decisions.md
docs/support/: bats_sbdl_converter.py  cpp-flavor.sbdl  extract-sbdl.sh  generate-sbdl.py  gherkin-to-csv.py  gherkin-to-sbdl.py  gherkin_mapping_config.py  gherkin_sbdl_converter.py  rust-flavor.sbdl
docs/templates/: jinja-extensions.py  requirements-traceability-matrix.md.j2  requirements.md.j2  requirements.template.md  software-requirements-specification.md.j2  software-test-plan.md.j2  software-test-specification.md.j2  software-verification-plan.md.j2  threat-model.md.j2
specification/requirement/: .doorstop.yml  HEAD-1.0.md  HEAD-2.0.md  HEAD-2.1.md  HEAD-2.2.md  HEAD-2.3.md  HEAD-2.4.md  HEAD-3.1.md  HEAD-4.1.md  HEAD-5.1.md  REQ-0001.md  REQ-0002.md  REQ-0003.md  REQ-0004.md
specification/requirements/: HEAD-1.0.md  HEAD-2.0.md  REQ-0001.md
specification/test/: .doorstop.yml  HEAD-1.0.md  TEST-0001.md  TEST-0002.md  TEST-0003.md  TEST-0004.md  TEST-0005.md  TEST-0006.md  TEST-0007.md  TEST-0008.md  TEST-0009.md  TEST-0010.md  TEST-0011.md  TEST-0012.md  TEST-0013.md  TEST-0014.md  TEST-0015.md  TEST-0016.md
specification/tests/: .doorstop.yml  HEAD-1.0.md  HEAD-2.0.md  TEST-0001.md  (+1 more)
test/: .clang-uml  CMakeLists.txt  CMakePresets.json  testsuite.bats
test/clang-tools/: CMakeLists.txt  clang-uml-class.cpp  unformatted.cpp
test/coverage/: CMakeLists.txt
test/cpp/workspace/: CMakeLists.txt  CMakePresets.json
test/cpp/workspace/clang-cl/: main.cpp  toolchain.cmake
test/cpp/workspace/fuzzing/: main.cpp
test/cpp/workspace/gcc-arm-none-eabi/: main.cpp
test/cpp/workspace/package-managers/: CMakeLists.txt
test/cpp/workspace/package-managers/cpm/: CMakeLists.txt
test/cpp/workspace/sanitizers/: asan.cpp  threadsan.cpp
test/cpp/workspace/test/: CMakeLists.txt
test/sanitizers/: CMakeLists.txt
(+112 files in other folders)
